--- a/src/component/FootballClubDetail/FootballClubDetail.css
+++ b/src/component/FootballClubDetail/FootballClubDetail.css
@@ -1,10 +1,9 @@
 .clubDetailbanner {
-  background-image: url("../../bannerImage/champions-league2.png");
+  background-image: url("../../bannerImage/background.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-attachment: fixed;
-  height: 415px;
+  height: 100%;
 }
 .teamBannerColumn {
   text-align: center;
@@ -14,13 +13,13 @@
   width: 250px;
 }
 .teamDetailBackground {
-  background-color: #0061bf;
+  background-color: #45465c;
 }
 .teamDetailRow {
   padding: 20px;
 }
 .teamDetailColumn {
-  background-color: #050e6d;
+  background-color: #70ce5d;
   border-radius: 12px;
   padding: 15px;
 }
